# gea

./: README.md  pyproject.toml
.github/workflows/: build-and-deploy.yaml  build-image.yaml
.paperspace/: app.json
artifacts/: class_index_mapping.pkl  new_lab_sample_input.json  sample_input.json
gea/: preprocessing.py  utils.py
gea/deployment/: Dockerfile.template  bentofile.yaml  pack.py  schema.py  service.py  setup.sh
gea/torch/model/: text_cnn.py
tests/: test_gea.py
tests/load_test/: README.md  locustfile.py
